--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "watch:css": "postcss src/tailwind.css -o src/tailwind.index.css -w",
     "build:css": "tailwind build src/tailwind.css -o src/tailwind.index.css ",
-    "start": "yarn watch:css & react-scripts start",
-    "build": "yarn build:css && react-scripts build",
+    "start": "npm run watch:css & react-scripts start",
+    "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
